--- a/main.css
+++ b/main.css
@@ -2,6 +2,8 @@ html, body {
   height: 100%;
 }
 
+
+
 body {
   display: flex;
   justify-content: center;
@@ -32,6 +34,7 @@ body {
   --borderWidth: 8px;
   background: #1D1F20;
   position: relative;
+  width: 100%;
   border-radius: var(--borderWidth);
 }
 
@@ -60,4 +63,17 @@ body {
     100% {
         background-position: 0% 50%;
     }
+}
+
+
+
+
+@media only screen and (max-width: 600px) {
+  #video{
+
+  width: 100%;
+  height: 100%;
+
+
+}
 }
