--- a/main.css
+++ b/main.css
@@ -10,14 +10,14 @@ body {
   background: #1D1F20;
 }
 
-#subtitle ,.message_portion{
+#subtitle ,.message-portion{
   color: #eee;
   font-family: 'Raleway';
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.message_portion{
+.message-portion{
   padding-top: 20px;
 }
 
