--- a/main.css
+++ b/main.css
@@ -34,6 +34,12 @@ body {
   background: #1D1F20;
   position: relative;
   border-radius: var(--borderWidth);
+  transition: opacity .5s;
+}
+
+.gradient-border--hidden{
+  display: none;
+  opacity: 0;
 }
 
 .gradient-border:after {
@@ -61,19 +67,4 @@ body {
     100% {
         background-position: 0% 50%;
     }
-}
-
-.loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid limegreen; /* Blue */
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 1s linear infinite;
-  margin: 20px auto;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
 }
