--- a/spinner.css
+++ b/spinner.css
@@ -1,84 +1,97 @@
-.spinner{
-  font-family: 'Raleway';
-  color: white;
-  text-align: center;
-  transition: opacity .5s;
+.spinner {
+	font-family: 'Raleway';
+	color: white;
+	text-align: center;
+	transition: opacity 0.5s;
 }
 
-.spinner--hidden{
-  display: none;
-  opacity: 0;
+.spinner--hidden {
+	display: none;
+	opacity: 0;
 }
 
 .sk-cube-grid {
-  width: 40px;
-  height: 40px;
-  margin: 100px auto;
+	width: 40px;
+	height: 40px;
+	margin: 100px auto;
 }
 
 .sk-cube-grid .sk-cube {
-  width: 33%;
-  height: 33%;
-  background-color: #333;
-  float: left;
-  -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
-          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
+	width: 33%;
+	height: 33%;
+	background-color: #333;
+	float: left;
+	-webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+	animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
 }
 .sk-cube-grid .sk-cube1 {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
-          background:#f79533; }
+	-webkit-animation-delay: 0.2s;
+	animation-delay: 0.2s;
+	background: #f79533;
+}
 .sk-cube-grid .sk-cube2 {
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-        background:#f37055; }
+	-webkit-animation-delay: 0.3s;
+	animation-delay: 0.3s;
+	background: #f37055;
+}
 .sk-cube-grid .sk-cube3 {
-  -webkit-animation-delay: 0.4s;
-          animation-delay: 0.4s;
-        background:#ef4e7b;
-}.sk-cube-grid .sk-cube4 {
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
-          background:#bebc1f; }
+	-webkit-animation-delay: 0.4s;
+	animation-delay: 0.4s;
+	background: #ef4e7b;
+}
+.sk-cube-grid .sk-cube4 {
+	-webkit-animation-delay: 0.1s;
+	animation-delay: 0.1s;
+	background: #bebc1f;
+}
 .sk-cube-grid .sk-cube5 {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
-        background:#45b16e; }
+	-webkit-animation-delay: 0.2s;
+	animation-delay: 0.2s;
+	background: #45b16e;
+}
 .sk-cube-grid .sk-cube6 {
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-        background:#a166ab; }
+	-webkit-animation-delay: 0.3s;
+	animation-delay: 0.3s;
+	background: #a166ab;
+}
 .sk-cube-grid .sk-cube7 {
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
-        background:#06dabd;
-       }
+	-webkit-animation-delay: 0s;
+	animation-delay: 0s;
+	background: #06dabd;
+}
 .sk-cube-grid .sk-cube8 {
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
-        background:#0b8be0; }
+	-webkit-animation-delay: 0.1s;
+	animation-delay: 0.1s;
+	background: #0b8be0;
+}
 .sk-cube-grid .sk-cube9 {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
-          background:#5b45d6; }
+	-webkit-animation-delay: 0.2s;
+	animation-delay: 0.2s;
+	background: #5b45d6;
+}
 
 @-webkit-keyframes sk-cubeGridScaleDelay {
-  0%, 70%, 100% {
-    -webkit-transform: scale3D(1, 1, 1);
-            transform: scale3D(1, 1, 1);
-  } 35% {
-    -webkit-transform: scale3D(0, 0, 1);
-            transform: scale3D(0, 0, 1); 
-  }
+	0%,
+	70%,
+	100% {
+		-webkit-transform: scale3D(1, 1, 1);
+		transform: scale3D(1, 1, 1);
+	}
+	35% {
+		-webkit-transform: scale3D(0, 0, 1);
+		transform: scale3D(0, 0, 1);
+	}
 }
 
 @keyframes sk-cubeGridScaleDelay {
-  0%, 70%, 100% {
-    -webkit-transform: scale3D(1, 1, 1);
-            transform: scale3D(1, 1, 1);
-  } 35% {
-    -webkit-transform: scale3D(0, 0, 1);
-            transform: scale3D(0, 0, 1);
-  } 
+	0%,
+	70%,
+	100% {
+		-webkit-transform: scale3D(1, 1, 1);
+		transform: scale3D(1, 1, 1);
+	}
+	35% {
+		-webkit-transform: scale3D(0, 0, 1);
+		transform: scale3D(0, 0, 1);
+	}
 }
-
