--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
   align-items: center;
   height: 100%;
   background: #1d1f20;
-  overflow-y: hidden; 
+  overflow-y: hidden;
 }
 
 .video-window-wrapper {
@@ -18,7 +18,7 @@ body {
 
 #subtitle {
   color: #eee;
-  font-family: 'Raleway';
+  font-family: "Raleway";
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,8 +35,11 @@ body {
   align-items: center;
   justify-content: center;
   color: #eee;
-  font-family: 'Raleway';
+  font-family: "Raleway";
   font-size: 2.5rem;
+
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
 
 /* Gradient credit: https://codepen.io/mike-schultz */
@@ -55,7 +58,7 @@ body {
 }
 
 .gradient-border:after {
-  content: '';
+  content: "";
   position: absolute;
   top: calc(-1 * var(--borderWidth));
   left: calc(-1 * var(--borderWidth));
