--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -9,7 +9,7 @@ body {
   align-items: center;
   height: 100%;
   background: #1d1f20;
-  overflow-y: hidden; 
+  overflow-y: hidden;
 }
 
 .video-window-wrapper {
@@ -18,7 +18,7 @@ body {
 
 #subtitle {
   color: #eee;
-  font-family: 'Raleway';
+  font-family: "Raleway";
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,14 +35,18 @@ body {
   align-items: center;
   justify-content: center;
   color: #eee;
-  font-family: 'Raleway';
+  font-family: "Raleway";
   font-size: 2.5rem;
 }
 
-#video{
+#video {
   transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);    
+  -webkit-transform: rotateY(180deg);
+}
+
+.camera_arrow img {
+  width: 100%;
 }
 
 /* Gradient credit: https://codepen.io/mike-schultz */
@@ -61,7 +65,7 @@ body {
 }
 
 .gradient-border:after {
-  content: '';
+  content: "";
   position: absolute;
   top: calc(-1 * var(--borderWidth));
   left: calc(-1 * var(--borderWidth));
@@ -113,18 +117,18 @@ body {
   cursor: pointer;
   background-color: #1d377e;
   border-radius: 100px;
-  -webkit-box-shadow: 4px 5px 9px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 4px 5px 9px 0px rgba(0,0,0,0.75);
-  box-shadow: 4px 5px 9px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 4px 5px 9px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 4px 5px 9px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 4px 5px 9px 0px rgba(0, 0, 0, 0.75);
   width: 60px;
   height: 60px;
   opacity: 0.4;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .mirror-camera:hover {
   opacity: 100 !important;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .mirror-camera img {
@@ -134,5 +138,5 @@ body {
 .flip-video {
   transform: none !important;
   -moz-transform: none !important;
-  -webkit-transform: none !important;  
+  -webkit-transform: none !important;
 }
